--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "fsh-sushi": "^3.17.0"
   },
   "devDependencies": {
-    "fsh-and-chips": "git+https://github.com/Outburn-IL/fhir-ig-tools.git"
+    "fsh-and-chips": "github:Outburn-IL/fhir-ig-tools"
   }
 }
